# wasmer-jni

./: .gitignore  README.md  build.sh  env.sh
.github/workflows/: rust.yml
java/: build.gradle  settings.gradle
java/src/main/java/com/archeros/wasmer/: HostFunction.java  Instance.java  InstanceImpl.java  JNIUtil.java  Memory.java  Natives.java  Options.java  ValType.java
java/src/main/java/com/github/salpadding/wasmer/: HostFunction.java  HostFunction.kt  Instance.java  Instance.kt  InstanceImpl.java  InstanceImpl.kt  JNIUtil.java  Memory.java  Natives.java  Options.java  ValType.java
java/src/main/java/org/github/salpadding/tinywasm/: HostFunction.java  Instance.java  InstanceImpl.java  JNIUtil.java  Natives.java
java/src/main/java/org/github/salpadding/wasmer/: HostFunction.java  HostFunction.kt  Instance.java  Instance.kt  InstanceImpl.java  InstanceImpl.kt  InstanceOptions.java  JNIUtil.java  Natives.java  Options.java  org_github_salpadding_tinywasm_Natives.h  org_github_salpadding_wasmer_Natives.h
java/src/test/java/com/archeros/wasmer/: TestUtil.java
java/src/test/resources/testdata/: wasm.wasm
rust/: Cargo.toml  build.js
rust/main/: Cargo.toml
rust/main/src/: main.rs
rust/src/: hex.rs  instance.rs  lib.rs  rp.rs  stack.rs  utils.rs
rust/src/testdata/: main.wasm  modules.json
rust/src/testdata/spec/: modules.json
rust/src/types/: executable.rs  frame_data.rs  initializer.rs  ins_pool.rs  instance.rs  label_data.rs  memory.rs  mod.rs  names.rs  offset.rs  table.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
(+9 files in other folders)
