[package]
name = "wasmer_jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
jni = "0.19.0"
wasmer = "2.0.0"
wasmer-compiler-singlepass = "2.0.0"
wasmer-compiler-cranelift = "2.0.0"
wasmer-engine-universal = "2.0.0"

[dev-dependencies]
serde_json = "1.0"
serde = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]